--- a/src/Style/ArticleCol.css
+++ b/src/Style/ArticleCol.css
@@ -1,10 +1,9 @@
 .articleCol{
 
 	color: black;
+	width: 100%;
 	/* /* margin-left: 200px; */
 	/* margin-right: 0px; */
-	
-	width: 40%; 
 	padding: 20px; 
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 	background-color: white;
