--- a/src/Style/Container.css
+++ b/src/Style/Container.css
@@ -1,7 +1,15 @@
 .container {
-	margin: 20px;
+	margin: 2%;
 	padding: 20px; 
 	/* border: solid; */
 	/* border-color: black;  */
 	background-color: ghostwhite;
+	display: flex;
+	flex-flow: row wrap;
+	flex-wrap: wrap;
+	justify-content: space-between; 
+	align-items: stretch;
+	align-content: stretch;
+	row-gap: 20px;
+	column-gap: 1%; 
 }
