--- a/src/Style/ContainerCol.css
+++ b/src/Style/ContainerCol.css
@@ -1,12 +1,22 @@
 .containerCol {
-	margin: 20px;
+	margin: 2%;
 	padding: 20px; 
 	/* border: solid; */
 	/* border-color: black;  */
 	background-color: ghostwhite;
 	display: flex; 
-	flex-flow: row wrap; 
-	justify-content: center; 
-	align-items: stretch; 
-	gap: 20px; 
+	flex-flow: row wrap;
+	flex-wrap: nowrap;
+	justify-content: space-between; 
+	align-items: stretch;
+	align-content: stretch;
+	row-gap: 20px;
+	column-gap: 1%; 
+}
+
+@media (max-width: 1300px)
+{
+	.containerCol {
+    	flex-wrap: wrap;
+	}
 }
